fix the gap sometimes caused by wide images
Add an 'articles' div around the full set of articles displayed in
the main part of the page. Constrain the width of the whole lot
rather than trying to flow around the right-hand panel.

--- a/theme/css/blank.scss
+++ b/theme/css/blank.scss
@@ -12,7 +12,7 @@ $small-font-size: 12px;
 body {
   font-family: 'Helvetica Neue', Arial, sans-serif;
   line-height: 1.6666;
-  color: #222; }
+  color: #222;
 }
 
 
@@ -29,7 +29,9 @@ a {
   font-size: $small-font-size;
 }
 
-
+#articles {
+  margin-right: 210px;
+}
 
 #navwrap {
   float: right;
